// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Make ripple effect Creation Passing default opts to circle 1`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "visibility",
  "10": "top",
  "2": "border-radius",
  "3": "transition",
  "4": "transform-origin",
  "5": "transform",
  "6": "position",
  "7": "height",
  "8": "width",
  "9": "left",
  "_importants": Object {
    "border-radius": "",
    "display": "",
    "height": "",
    "left": "",
    "position": "",
    "top": "",
    "transform": "",
    "transform-origin": "",
    "transition": "",
    "visibility": undefined,
    "width": "",
  },
  "_length": 11,
  "_onChange": [Function],
  "_values": Object {
    "border-radius": "99999px",
    "display": "block",
    "height": "0px",
    "left": "0px",
    "position": "absolute",
    "top": "0px",
    "transform": "scale(0)",
    "transform-origin": "center center",
    "transition": "transform .8s cubic-bezier(0.16, 1, 0.3, 1)",
    "visibility": "visible",
    "width": "0px",
  },
}
`;

exports[`Make ripple effect Creation Passing default opts to container and circle 1`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "visibility",
  "10": "top",
  "11": "right",
  "12": "bottom",
  "2": "pointer-events",
  "3": "position",
  "4": "overflow",
  "5": "border-radius",
  "6": "transition",
  "7": "margin",
  "8": "padding",
  "9": "left",
  "_importants": Object {
    "border-radius": "",
    "bottom": "",
    "display": "",
    "left": "",
    "margin": "",
    "overflow": "",
    "padding": "",
    "pointer-events": "",
    "position": "",
    "right": "",
    "top": "",
    "transition": "",
    "visibility": undefined,
  },
  "_length": 13,
  "_onChange": [Function],
  "_values": Object {
    "border-radius": "inherit",
    "bottom": "0px",
    "display": "block",
    "left": "0px",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "overflow": "hidden",
    "padding": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
    "pointer-events": "none",
    "position": "absolute",
    "right": "0px",
    "top": "0px",
    "transition": "opacity .7s cubic-bezier(0.4, 0, 0.2, 1)",
    "visibility": "visible",
  },
}
`;

exports[`Make ripple effect Creation Passing styles to circle 1`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "visibility",
  "10": "opacity",
  "11": "left",
  "12": "top",
  "2": "border-radius",
  "3": "transition",
  "4": "transform-origin",
  "5": "transform",
  "6": "position",
  "7": "height",
  "8": "width",
  "9": "border",
  "_importants": Object {
    "border": "",
    "border-radius": "",
    "display": "",
    "height": "",
    "left": "",
    "opacity": "",
    "position": "",
    "top": "",
    "transform": "",
    "transform-origin": "",
    "transition": "",
    "visibility": undefined,
    "width": "",
  },
  "_length": 13,
  "_onChange": [Function],
  "_values": Object {
    "border": "1px solid black",
    "border-bottom": "1px solid black",
    "border-bottom-color": "black",
    "border-bottom-style": "solid",
    "border-bottom-width": "1px",
    "border-color": "black",
    "border-left": "1px solid black",
    "border-left-color": "black",
    "border-left-style": "solid",
    "border-left-width": "1px",
    "border-radius": "5px",
    "border-right": "1px solid black",
    "border-right-color": "black",
    "border-right-style": "solid",
    "border-right-width": "1px",
    "border-style": "solid",
    "border-top": "1px solid black",
    "border-top-color": "black",
    "border-top-style": "solid",
    "border-top-width": "1px",
    "border-width": "1px",
    "display": "block",
    "height": "0px",
    "left": "0px",
    "opacity": "0",
    "position": "absolute",
    "top": "0px",
    "transform": "scale(0)",
    "transform-origin": "center center",
    "transition": "all .4s linear",
    "visibility": "visible",
    "width": "0px",
  },
}
`;

exports[`Make ripple effect Creation Passing styles to container 1`] = `
CSSStyleDeclaration {
  "0": "display",
  "1": "visibility",
  "10": "top",
  "11": "right",
  "12": "bottom",
  "13": "align-content",
  "14": "transition-property",
  "15": "color",
  "2": "pointer-events",
  "3": "position",
  "4": "overflow",
  "5": "border-radius",
  "6": "transition",
  "7": "margin",
  "8": "padding",
  "9": "left",
  "_importants": Object {
    "align-content": "",
    "border-radius": "",
    "bottom": "",
    "color": "",
    "display": "",
    "left": "",
    "margin": "",
    "overflow": "",
    "padding": "",
    "pointer-events": "",
    "position": "",
    "right": "",
    "top": "",
    "transition": "",
    "transition-property": "",
    "visibility": undefined,
  },
  "_length": 16,
  "_onChange": [Function],
  "_values": Object {
    "align-content": "center",
    "border-radius": "inherit",
    "bottom": "0px",
    "color": "red",
    "display": "block",
    "left": "0px",
    "margin": "0px",
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
    "overflow": "hidden",
    "padding": "0px",
    "padding-bottom": "0px",
    "padding-left": "0px",
    "padding-right": "0px",
    "padding-top": "0px",
    "pointer-events": "none",
    "position": "absolute",
    "right": "0px",
    "top": "0px",
    "transition": "opacity .7s cubic-bezier(0.4, 0, 0.2, 1)",
    "transition-property": "background",
    "visibility": "visible",
  },
}
`;
